--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
       </div>
     </div>
 
-    <div class="row footer bg-dark text-white mt-5" id='contact'>
+    <div class="row footer bg-dark mt-5" id='contact'>
       <div class="col-12 col-sm-3 mt-5 offset-sm-1">
         <h3>Contact Us</h3>
         <p>
-          <i class="fas fa-envelope"></i> VeganLifestyle@gmail.com<br>
-          <i class="fab fa-whatsapp"></i> 9123456789<br>
-          <i class="fas fa-globe"></i> www.VeganLifestle.com
+          <i class="fas fab fa-envelope mb-4"></i> VeganLifestyle@gmail.com<br>
+          <i class="fab fa-whatsapp mb-4"></i> 9123456789<br>
+          <i class="fas fab fa-globe"></i> www.VeganLifestle.com
         </p>
       </div>
       <div class="col-12 col-sm-4 mt-5">
